--- a/Catalog.Migrator/appsettings.Development.json
+++ b/Catalog.Migrator/appsettings.Development.json
@@ -1,5 +1,11 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
   "Database": {
-    "ConnectionString": "Server=localhost;Database=Catalog;Trusted_Connection=False;User Id=sa;Password=NotWeakPassword123;"
+    "ConnectionString": "Server=localhost;Database=Catalog;Trusted_Connection=False;User Id=sa;Password=NotWeakPassword123;TrustServerCertificate=True;"
   }
 }
