--- a/Catalog.API/Catalog.API.csproj
+++ b/Catalog.API/Catalog.API.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Catalog.Domain\Catalog.Domain.csproj" />
+      <ProjectReference Include="..\Catalog.Kafka\Catalog.Kafka.csproj" />
       <ProjectReference Include="..\Catalog.Migrator\Catalog.Migrator.csproj" />
     </ItemGroup>
 
