--- a/Catalog.Domain/Catalog.Domain.csproj
+++ b/Catalog.Domain/Catalog.Domain.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MassTransit" Version="7.0.0" />
+      <PackageReference Include="MassTransit.Kafka" Version="7.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
     </ItemGroup>
