--- a/Catalog.API/appsettings.Development.json
+++ b/Catalog.API/appsettings.Development.json
@@ -7,5 +7,15 @@
   },
   "Database": {
     "ConnectionString": "Server=localhost;Database=Catalog;Trusted_Connection=False;User Id=sa;Password=NotWeakPassword123;TrustServerCertificate=True;"
+  },
+  "Kafka": {
+    "Host": "localhost",
+    "Port": 9092,
+    "ProductCreateTopic": "product-create",
+    "ProductDeleteTopic": "product-delete",
+    "ProductUpdateTopic": "product-update",
+    "CategoryCreateTopic": "category-create",
+    "CategoryDeleteTopic": "category-delete",
+    "CategoryUpdateTopic": "category-update"
   }
 }
