--- a/Catalog.Domain/Catalog.Domain.csproj
+++ b/Catalog.Domain/Catalog.Domain.csproj
@@ -7,10 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Confluent.Kafka" Version="2.3.0" />
       <PackageReference Include="MassTransit" Version="7.0.0" />
       <PackageReference Include="MassTransit.Kafka" Version="7.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Catalog.Messaging\Catalog.Messaging.csproj" />
     </ItemGroup>
 
 </Project>
