--- a/Carts.Messaging/Carts.Messaging.csproj
+++ b/Carts.Messaging/Carts.Messaging.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MassTransit" Version="7.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Shared.Messaging\Shared.Messaging.csproj" />
+    </ItemGroup>
+
 </Project>
