--- a/Carts.API/Carts.API.csproj
+++ b/Carts.API/Carts.API.csproj
@@ -8,6 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Confluent.Kafka" Version="2.3.0" />
+        <PackageReference Include="MassTransit.AspNetCore" Version="7.0.0" />
+        <PackageReference Include="MassTransit.Kafka" Version="7.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
@@ -16,6 +19,12 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Carts.Domain\Carts.Domain.csproj" />
+      <ProjectReference Include="..\Carts.Messaging\Carts.Messaging.csproj" />
+      <ProjectReference Include="..\Shared.Messaging\Shared.Messaging.csproj" />
     </ItemGroup>
 
 </Project>
