--- a/Catalog.API/Catalog.API.csproj
+++ b/Catalog.API/Catalog.API.csproj
@@ -19,7 +19,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Catalog.Domain\Catalog.Domain.csproj" />
-      <ProjectReference Include="..\Catalog.Messaging\Catalog.Messaging.csproj" />
+      <ProjectReference Include="..\Shared.Messaging\Shared.Messaging.csproj" />
     </ItemGroup>
 
     <ItemGroup>
