--- a/Shared.Messaging/Shared.Messaging.csproj
+++ b/Shared.Messaging/Shared.Messaging.csproj
@@ -4,10 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>Catalog.Messaging</RootNamespace>
     </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.0" />
-    </ItemGroup>
 
 </Project>
