--- a/Catalog.API/appsettings.Development.json
+++ b/Catalog.API/appsettings.Development.json
@@ -9,7 +9,7 @@
     "ConnectionString": "Server=localhost;Database=Catalog;Trusted_Connection=False;User Id=sa;Password=NotWeakPassword123;TrustServerCertificate=True;"
   },
   "Kafka": {
-    "Host": "localhost",
+    "Address": "localhost",
     "Port": 9092,
     "ProductCreateTopic": "product-create",
     "ProductDeleteTopic": "product-delete",
