--- a/Catalog.API/appsettings.Docker.json
+++ b/Catalog.API/appsettings.Docker.json
@@ -1,5 +1,15 @@
 {
   "Database": {
     "ConnectionString": "Server=Catalog.Database;Database=Catalog;Trusted_Connection=False;User Id=sa;Password=NotWeakPassword123;TrustServerCertificate=True"
+  },
+  "Kafka": {
+    "Address": "kafka",
+    "Port": 9092,
+    "ProductCreateTopic": "product-create",
+    "ProductDeleteTopic": "product-delete",
+    "ProductUpdateTopic": "product-update",
+    "CategoryCreateTopic": "category-create",
+    "CategoryDeleteTopic": "category-delete",
+    "CategoryUpdateTopic": "category-update"
   }
 }
