--- a/Carts.API/appsettings.Docker.json
+++ b/Carts.API/appsettings.Docker.json
@@ -6,6 +6,18 @@
     }
   },
   "Redis": {
-    "ConnectionString": "Cart.Redis:6379"
+    "ConnectionString": "Cart.Redis:6379",
+    "CartExpiryInMinutes": 3,
+    "CartsByProductExpiryInMinutes": 3
+  },
+  "Kafka": {
+    "Address": "kafka",
+    "Port": 9092,
+    "ProductCreateTopic": "product-create",
+    "ProductDeleteTopic": "product-delete",
+    "ProductUpdateTopic": "product-update",
+    "CategoryCreateTopic": "category-create",
+    "CategoryDeleteTopic": "category-delete",
+    "CategoryUpdateTopic": "category-update"
   }
 }
