--- a/Customers.Migrator/Customers.Migrator.csproj
+++ b/Customers.Migrator/Customers.Migrator.csproj
@@ -24,12 +24,10 @@
         <None Update="appsettings.Docker.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
-        <None Update="appsettings.Development.json">
-          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </None>
-        <None Update="appsettings.Docker.json">
-          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Shared.Migrator\Shared.Migrator.csproj" />
     </ItemGroup>
 
     <ItemGroup>
