--- a/Carts.Domain/Carts.Domain.csproj
+++ b/Carts.Domain/Carts.Domain.csproj
@@ -8,6 +8,12 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.0" />
+      <PackageReference Include="Polly" Version="7.0.1" />
+      <PackageReference Include="Scrutor" Version="4.2.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Shared.DiagnosticContext\Shared.DiagnosticContext.csproj" />
     </ItemGroup>
 
 </Project>
