--- a/prometheus.yml
+++ b/prometheus.yml
@@ -14,3 +14,11 @@ scrape_configs:
   - job_name: "catalog.api.host_machine"
     static_configs:
       - targets: ["host.docker.internal:5125"]
+          
+  - job_name: "carts.api"
+    static_configs:
+      - targets: ["host.docker.internal:82"]
+
+  - job_name: "carts.api.host_machine"
+    static_configs:
+      - targets: ["host.docker.internal:5213"]
